--- a/index.html
+++ b/index.html
@@ -4,11 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>figma to html</title>
-    <link rel="stylesheet" href="asset/css/reset.css">
     <link rel="stylesheet" href="asset/css/style.css">
+    <link rel="stylesheet" href="asset/css/skins/color-1.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
 </head>
 <body>
-    <h1>Hello World</h1>
+    <!-- Container Start -->
+     <div class="main-container">
+        <!-- Aside start -->
+            <div class="aside">
+                <div class="logo">
+                    <a href=""><span>A</span>tlas</a>
+                </div>
+                <div class="nav-toggler">
+                    <span></span>
+                </div>
+                <ul class="nav">
+                    <li><a href="" class="active"><i class="fa fa-home"></i>Trang chủ</a></li>
+                    <li><a href=""><i class="fa fa-user"></i>Thông tin</a></li>
+                    <li><a href=""><i class="fa fa-list"></i>Dự án</a></li>
+                    <li><a href=""><i class="fa fa-briefcase"></i>Port</a></li>
+                    <li><a href=""><i class="fa fa-comments"></i>Liên hệ</a></li>
+
+                </ul>
+            </div>
+        <!-- Aside End -->
+         <!-- Main start -->
+          <div class="main-content">
+            <!-- Home section start -->
+             <section class="home section">
+                Home
+             </section>
+            <!-- Home section end -->
+
+          </div>
+         <!-- Main End -->
+     </div>
+    <!-- Container End -->
+    <!-- JS -->
+     <script src="js/script.js"></script>
 </body>
 </html>
