--- a/index.html
+++ b/index.html
@@ -34,7 +34,19 @@
           <div class="main-content">
             <!-- Home section start -->
              <section class="home section">
-                Home
+                <div class="container">
+                    <div class="row">
+                        <div class="home-info padd-15">
+                            <h3 class="hello">Xin chào, tôi là<span class="name">KT</span></h3>
+                            <h3 class="my-profession">Tôi là sinh viên ngành <span class="typing">Web</span></h3>
+                            <p>ac vb dfgh dfgh ẻty fgh fghj dfghj rtyẻtyh tyh rfgh rty yu ẻty ẻt ẻty ẻtya sdf fg yui rt45 6...</p>
+                            <a href="#contact" class="btn hire-me">Liên hệ</a>
+                        </div>
+                        <div class="home-img padd-15">
+                            <img src="asset/img/tako1.png" alt="me">
+                        </div>
+                    </div>
+                </div>
              </section>
             <!-- Home section end -->
 
