--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
                             <a href="#contact" class="btn hire-me">Liên hệ</a>
                         </div>
                         <div class="home-img padd-15">
-                            <img id="tako" src="asset/img/tako.png" alt="tako">
+                            <img id="tako" src="asset/img/tako3.gif" alt="tako">
                             <img id="tako-gif" src="asset/img/tako2.gif" alt="feed the tako" style="display:none;">
+                            <img id="tako3" src="asset/img/tako3.png" alt="tako3" style="display:none;">
                             <img id="tako2" src="asset/img/tako2.png" alt="tako2" style="display:none;">
+                            <img id="tako-eat" src="asset/img/tako_eat.gif" alt="tako eat" style="display:none;">
                             <div id="feed-tako" style="display:none;">Feed the Tako</div>
-                        </div>                        
+                        </div>                                                                                                               
                                               
                     </div>
                 </div>
