--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>figma to html</title>
     <link rel="stylesheet" href="asset/css/style.css">
     <link rel="stylesheet" href="asset/css/skins/color-1.css">
+    <link rel="stylesheet" href="asset/css/tako.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/Draggable.min.js"></script>
@@ -33,7 +34,7 @@
          <!-- Main start -->
           <div class="main-content">
             <!-- Home section start -->
-             <section class="home section">
+             <section class="home section hidden">
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
@@ -55,11 +56,63 @@
                 </div>
              </section>
             <!-- Home section end -->
+            <!-- about section start -->
+             <section class="about section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>About me</h2> 
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="about-content padd-15">
+                            <div class="row">
+                                <div class="about-text">
+                                    <h3>I'm Alimi Mousasd and <span>Web developer</span></h3>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In molestie pellentesque convallis. Quisque quis lectus molestie, feugiat neque quis, commodo nisi. Suspendisse ultricies et purus quis cursus. In et tristique lacus. Aenean fermentum nec augue at vestibulum. Phasellus volutpat convallis viverra. Etiam commodo ipsum in dictum convallis. Nulla ut porttitor velit. Duis posuere sodales venenatis. Praesent ultrices, magna vitae elementum mattis, ipsum lectus mollis sem, sed euismod eros tortor sed libero.</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="personal-info padd-15">
+                                    <div class="row">
+                                        <div class="info-item">
+                                            <p>Ngày sinh: <span>27 Sep 2000</span> </p>
+                                        </div>
+                                        <div class="info-item">
+                                            <p>Age: <span>27 Sep 2000</span> </p>
+                                        </div>
+                                        <div class="info-item">
+                                            <p>Website: <span>27 Sep 2000</span> </p>
+                                        </div><div class="info-item">
+                                            <p>Email: <span>27 Sep 2000</span> </p>
+                                        </div><div class="info-item">
+                                            <p>Degree: <span>27 Sep 2000</span> </p>
+                                        </div>
+                                        </div><div class="info-item">
+                                            <p>Phone: <span>27 Sep 2000</span> </p>
+                                        </div>
+                                        </div><div class="info-item">
+                                            <p>City: <span>27 Sep 2000</span> </p>
+                                        </div>
+                                        </div><div class="info-item">
+                                            <p>Freelnace: <span>27 Sep 2000</span> </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="skills">Skills</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+             </section>
+            <!-- about section end -->
+
           </div>
          <!-- Main End -->
      </div>
     <!-- Container End -->
     <!-- JS -->
-     <script src="asset/js/script.js"></script>
+     <script src="asset/js/tako.js"></script>
 </body>
 </html>
