--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
              </section>
             <!-- Home section end -->
             <!-- about section start -->
-             <section class="about section">
+             <section class="about section hidden">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -178,6 +178,37 @@
                                 </div>
                                 <div class="experience padd-15">
                                     <h3 class="title">experience</h3>
+                                    <div class="row">
+                                        <div class="timeline-box padd-15">
+                                            <div class="timeline shadow-dark">
+                                                <!-- timeline item -->
+                                                 <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                        <h3 class="timeline-date">
+                                                            <i class="fa fa-calendar"></i> 2013 - 2015
+                                                        </h3>
+                                                        <h4 class="timeline-title">Master in computer science</h4>
+                                                        <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris enim sapien, vehicula et condimentum quis, scelerisque eget ante. Morbi a orci ante. Praesent sollicitudin ante ut nisi ultricies posuere. Duis porta mauris et massa iaculis efficitur. Donec lobortis ipsum id ullamcorper lobortis. Cras congue diam sed orci elementum, in faucibus arcu tincidunt. Duis aliquam rhoncus mauris a maximus.</p>
+                                                 </div>
+                                                 <!-- timeline item -->
+                                                 <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                        <h3 class="timeline-date"><i class="fa fa-calendar"></i>2013 - 2015
+                                                        </h3>
+                                                        <h4 class="timeline-title">Master in computer science</h4>
+                                                        <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris enim sapien, vehicula et condimentum quis, scelerisque eget ante. Morbi a orci ante. Praesent sollicitudin ante ut nisi ultricies posuere. Duis porta mauris et massa iaculis efficitur. Donec lobortis ipsum id ullamcorper lobortis. Cras congue diam sed orci elementum, in faucibus arcu tincidunt. Duis aliquam rhoncus mauris a maximus.</p>
+                                                 </div>
+                                                 <!-- timeline item -->
+                                                 <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                        <h3 class="timeline-date"><i class="fa fa-calendar"></i>2013 - 2015
+                                                        </h3>
+                                                        <h4 class="timeline-title">Master in computer science</h4>
+                                                        <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris enim sapien, vehicula et condimentum quis, scelerisque eget ante. Morbi a orci ante. Praesent sollicitudin ante ut nisi ultricies posuere. Duis porta mauris et massa iaculis efficitur. Donec lobortis ipsum id ullamcorper lobortis. Cras congue diam sed orci elementum, in faucibus arcu tincidunt. Duis aliquam rhoncus mauris a maximus.</p>
+                                                 </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -185,6 +216,85 @@
                 </div>
              </section>
             <!-- about section end -->
+            <!-- services section start -->
+             <section class="service section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Services</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <!-- Services item start -->
+                        <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-mobile-alt"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae excepturi officiis repellendus?</p>
+                            </div>
+                        </div>
+                        <!-- Services item end -->
+                        <!-- Services item start -->
+                        <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-laptop-code"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae excepturi officiis repellendus?</p>
+                            </div>
+                        </div>
+                        <!-- Services item end -->
+                        <!-- Services item start -->
+                        <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-palette"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae excepturi officiis repellendus?</p>
+                            </div>
+                        </div>
+                        <!-- Services item end -->
+                        <!-- Services item start -->
+                        <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-code"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae excepturi officiis repellendus?</p>
+                            </div>
+                        </div>
+                        <!-- Services item end -->
+                        <!-- Services item start -->
+                        <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-search"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae excepturi officiis repellendus?</p>
+                            </div>
+                        </div>
+                        <!-- Services item end -->
+                        <!-- Services item start -->
+                        <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-bullhorn"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae excepturi officiis repellendus?</p>
+                            </div>
+                        </div>
+                        <!-- Services item end -->
+                    </div>
+                </div>
+             </section>
+            <!-- services section end -->
 
           </div>
          <!-- Main End -->
