--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Aside start -->
             <div class="aside">
                 <div class="logo">
-                    <a href=""><span>A</span>tlas</a>
+                    <a href=""><span>Atlas</span></a>
                 </div>
                 <div class="nav-toggler">
                     <span></span>
@@ -38,10 +38,11 @@
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
-                            <h3 class="hello">Xin chào, tôi là<span class="name">KT</span></h3>
+                            <h3 class="hello">Xin chào, tôi là <span class="name">KT</span></h3>
                             <h3 class="my-profession">Tôi là sinh viên ngành <span class="typing">Web</span></h3>
-                            <p class="intro">I'm a web designer with extensive experience for over 10 years. My expertise is to create and website design, graphic design, and many more...</p>
+                            <p class="intro">Tôi là sinh viên ngành lập trình web tại FPT Polytechnic, đam mê công nghệ và luôn tìm kiếm cơ hội để phát triển kỹ năng và sáng tạo.</p>
                             <a href="#contact" class="btn hire-me">Liên hệ</a>
+                 
                         </div>
                         <div class="home-img padd-15">
                             <img id="tako" src="asset/img/tako3.gif" alt="tako">
@@ -68,22 +69,22 @@
                         <div class="about-content padd-15">
                             <div class="row">
                                 <div class="about-text">
-                                    <h3>I'm Alimi Mousasd and <span>Web developer</span></h3>
+                                    <h3>Tôi là Nguyễn Thái Nguyên là 1 <span>Web developer</span></h3>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In molestie pellentesque convallis. Quisque quis lectus molestie, feugiat neque quis, commodo nisi. Suspendisse ultricies et purus quis cursus. In et tristique lacus. Aenean fermentum nec augue at vestibulum. Phasellus volutpat convallis viverra. Etiam commodo ipsum in dictum convallis. Nulla ut porttitor velit. Duis posuere sodales venenatis. Praesent ultrices, magna vitae elementum mattis, ipsum lectus mollis sem, sed euismod eros tortor sed libero.</p>
+                                        Tôi là sinh viên ngành lập trình web tại FPT Polytechnic, thành thạo cả front-end và back-end, đặc biệt với các môi trường như ReactJS và Angular. Đam mê công nghệ, tôi luôn tìm kiếm cơ hội phát triển kỹ năng và sáng tạo. Bên cạnh việc học, tôi thích tham gia các dự án mã nguồn mở và mong muốn trở thành một nhà phát triển ứng dụng web chuyên nghiệp.</p>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="personal-info padd-15">
                                     <div class="row">
                                         <div class="info-item padd-15">
-                                            <p>Ngày sinh: <span>27 Sep 2000</span> </p>
+                                            <p>Ngày sinh: <span>25 09 2004</span> </p>
                                         </div>
                                         <div class="info-item padd-15">
                                             <p>Tuổi: <span>20</span> </p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p>Website: <span>https://github.com/Thefox235/-sales-website-1</span> </p>
+                                            <p>Website: <span>https://github.com/Thefox235/</span> </p>
                                         </div>
                                         <div class="info-item padd-15">
                                             <p>Email: <span>thanhduyhf2gmail.com</span> </p>
@@ -159,7 +160,7 @@
                                                  <!-- timeline item -->
                                                  <div class="timeline-item">
                                                     <div class="circle-dot"></div>
-                                                        <h3 class="timeline-date"><i class="fa fa-calendar"></i>2013 - 2015
+                                                        <h3 class="timeline-date"><i class="fa fa-calendar"></i> 2013 - 2015
                                                         </h3>
                                                         <h4 class="timeline-title">Master in computer science</h4>
                                                         <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris enim sapien, vehicula et condimentum quis, scelerisque eget ante. Morbi a orci ante. Praesent sollicitudin ante ut nisi ultricies posuere. Duis porta mauris et massa iaculis efficitur. Donec lobortis ipsum id ullamcorper lobortis. Cras congue diam sed orci elementum, in faucibus arcu tincidunt. Duis aliquam rhoncus mauris a maximus.</p>
@@ -167,7 +168,7 @@
                                                  <!-- timeline item -->
                                                  <div class="timeline-item">
                                                     <div class="circle-dot"></div>
-                                                        <h3 class="timeline-date"><i class="fa fa-calendar"></i>2013 - 2015
+                                                        <h3 class="timeline-date"><i class="fa fa-calendar"></i> 2013 - 2015
                                                         </h3>
                                                         <h4 class="timeline-title">Master in computer science</h4>
                                                         <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris enim sapien, vehicula et condimentum quis, scelerisque eget ante. Morbi a orci ante. Praesent sollicitudin ante ut nisi ultricies posuere. Duis porta mauris et massa iaculis efficitur. Donec lobortis ipsum id ullamcorper lobortis. Cras congue diam sed orci elementum, in faucibus arcu tincidunt. Duis aliquam rhoncus mauris a maximus.</p>
@@ -193,7 +194,7 @@
                                                  <!-- timeline item -->
                                                  <div class="timeline-item">
                                                     <div class="circle-dot"></div>
-                                                        <h3 class="timeline-date"><i class="fa fa-calendar"></i>2013 - 2015
+                                                        <h3 class="timeline-date"><i class="fa fa-calendar"></i> 2013 - 2015
                                                         </h3>
                                                         <h4 class="timeline-title">Master in computer science</h4>
                                                         <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris enim sapien, vehicula et condimentum quis, scelerisque eget ante. Morbi a orci ante. Praesent sollicitudin ante ut nisi ultricies posuere. Duis porta mauris et massa iaculis efficitur. Donec lobortis ipsum id ullamcorper lobortis. Cras congue diam sed orci elementum, in faucibus arcu tincidunt. Duis aliquam rhoncus mauris a maximus.</p>
@@ -201,7 +202,7 @@
                                                  <!-- timeline item -->
                                                  <div class="timeline-item">
                                                     <div class="circle-dot"></div>
-                                                        <h3 class="timeline-date"><i class="fa fa-calendar"></i>2013 - 2015
+                                                        <h3 class="timeline-date"><i class="fa fa-calendar"></i> 2013 - 2015
                                                         </h3>
                                                         <h4 class="timeline-title">Master in computer science</h4>
                                                         <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris enim sapien, vehicula et condimentum quis, scelerisque eget ante. Morbi a orci ante. Praesent sollicitudin ante ut nisi ultricies posuere. Duis porta mauris et massa iaculis efficitur. Donec lobortis ipsum id ullamcorper lobortis. Cras congue diam sed orci elementum, in faucibus arcu tincidunt. Duis aliquam rhoncus mauris a maximus.</p>
