--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <h3 class="my-profession">Tôi là sinh viên ngành <span class="typing">Web</span></h3>
                             <p class="intro">Tôi là sinh viên ngành lập trình web tại FPT Polytechnic, đam mê công nghệ và luôn tìm kiếm cơ hội để phát triển kỹ năng và sáng tạo.</p>
                             <!-- <a href="#contact" class="btn hire-me">Liên hệ</a> -->
-                             <div class="">
+                             <div class="container-button">
                                 <a href="#" class="button">
                                     <div class="button__content">
                                         <span class="button__text">Download</span>
@@ -59,7 +59,7 @@
                                     <img src="asset/img/cookie.png" alt="" class="button__circle-2">
                                     <img src="asset/img/tako2.png" alt="" class="button__diamond">
                                     <img src="asset/img/tako2.png" alt="" class="button__triangle">
-    
+                                    <div class="button__shadow"></div>
                                 </a>
                              </div>
                             
