--- a/index.html
+++ b/index.html
@@ -205,10 +205,20 @@
                                                  <div class="timeline-item">
                                                     <div class="circle-dot"></div>
                                                         <h3 class="timeline-date">
-                                                            <i class="fa fa-calendar"></i> 2013 - 2015
+                                                            <i class="fa fa-calendar"></i> 2024
                                                         </h3>
-                                                        <h4 class="timeline-title">Master in computer science</h4>
-                                                        <p class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris enim sapien, vehicula et condimentum quis, scelerisque eget ante. Morbi a orci ante. Praesent sollicitudin ante ut nisi ultricies posuere. Duis porta mauris et massa iaculis efficitur. Donec lobortis ipsum id ullamcorper lobortis. Cras congue diam sed orci elementum, in faucibus arcu tincidunt. Duis aliquam rhoncus mauris a maximus.</p>
+                                                        <h4 class="timeline-title">Thực hành tại xưởng của trường</h4>
+                                                        <p class="timeline-text">Xây dựng website bán hàng</p>
+                                                        <ul>
+                                                            <li>- Số lượng thành viên: 01 (project cá nhân)</li>
+                                                            <li><ul>- Công nghệ sử dụng:</ul>
+                                                                <li>+Font-end: HTML/CSS, javascript, React Js</li>
+                                                                <li>+Back-end: Node js, </li>
+                                                            </li>
+                                                            <li>- Công cụ và Công nghệ: Thành thạo sử dụng các công cụ phát triển như Git, VS Code, và giao diện dòng lệnh.</li>
+                                                            <li>- Ứng dụng Thiết kế: Học cách thiết kế và tạo prototype bằng Figma.</li>
+                                                            <li>- Phát triển Dự án: Tham gia vào nhiều dự án yêu cầu tích hợp công nghệ frontend và backend, nâng cao kỹ năng kỹ thuật và làm việc nhóm.</li>
+                                                        </ul>
                                                  </div>
                                                  <!-- timeline item -->
                                                  <div class="timeline-item">
