--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>figma to html</title>
     <link rel="stylesheet" href="asset/css/style.css">
-    <link rel="stylesheet" href="asset/css/skins/color-1.css">
     <link rel="stylesheet" href="asset/css/tako.css">
+    <link rel="stylesheet" href="asset/css/skins/color-1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.5.0/remixicon.min.css">
+    <!-- Color -->
+    <link rel="stylesheet" href="asset/css/skins/color-1.css" class="alternate-style" title="color-1" disabled>
+    <link rel="stylesheet" href="asset/css/skins/color-2.css" class="alternate-style" title="color-2" disabled>
+    <link rel="stylesheet" href="asset/css/skins/color-3.css" class="alternate-style" title="color-3" disabled>
+    <link rel="stylesheet" href="asset/css/skins/color-4.css" class="alternate-style" title="color-4" disabled>
+    <link rel="stylesheet" href="asset/css/skins/color-5.css" class="alternate-style" title="color-5" disabled>
+    <link rel="stylesheet" href="asset/css/style-switcher.css">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/Draggable.min.js"></script>
 </head>
@@ -24,18 +32,17 @@
                     <span></span>
                 </div>
                 <ul class="nav">
-                    <li><a href="" class="active"><i class="fa fa-home"></i>Trang chủ</a></li>
-                    <li><a href=""><i class="fa fa-user"></i>Thông tin</a></li>
-                    <li><a href=""><i class="fa fa-list"></i>Dự án</a></li>
-                    <li><a href=""><i class="fa fa-briefcase"></i>Port</a></li>
-                    <li><a href=""><i class="fa fa-comments"></i>Liên hệ</a></li>
+                    <li><a href="#home" class="active"><i class="fa fa-home"></i>Trang chủ</a></li>
+                    <li><a href="#about"><i class="fa fa-user"></i>Thông tin</a></li> 
+                    <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Dự án</a></li>
+                    <li><a href="#contact"><i class="fa fa-comments"></i>Liên hệ</a></li>
                 </ul>
             </div>
         <!-- Aside End -->
          <!-- Main start -->
           <div class="main-content">
             <!-- Home section start -->
-             <section class="home section">
+             <section class="home section" id="home">
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
@@ -82,7 +89,7 @@
              </section>
             <!-- Home section end -->
             <!-- about section start -->
-             <section class="about section">
+             <section class="about section" id="about">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -251,7 +258,7 @@
             <!-- about section end -->
            
             <!-- portfolio section start -->
-             <section class="portfolio section">
+             <section class="portfolio section" id="portfolio">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -323,7 +330,7 @@
              </section>
             <!-- portfolio section end -->
             <!-- contact section start -->
-             <section class="contact section">
+             <section class="contact section" id="contact">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -423,8 +430,29 @@
           </div>
          <!-- Main End -->
      </div>
+     <!-- Color switch start-->
+        <div class="style-switcher">
+            <div class="style-switcher-toggler s-icon">
+                <i class="fas fa-cog fa-spin"></i>
+            </div>
+            <div class="day-night s-icon">
+                <i class="fas "></i>
+            </div>
+            <h4>Theme Color</h4>
+            <div class="colors">
+                <span class="color-1" onclick="setActiveStyle('color-1')"></span>
+                <span class="color-2" onclick="setActiveStyle('color-2')"></span>
+                <span class="color-3" onclick="setActiveStyle('color-3')"></span>
+                <span class="color-4" onclick="setActiveStyle('color-4')"></span>
+                <span class="color-5" onclick="setActiveStyle('color-5')"></span>           
+            </div>
+        </div>
+     <!-- Color switch end-->
     <!-- Container End -->
     <!-- JS -->
-     <script src="asset/js/tako.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.1.0/typed.umd.js" integrity="sha512-+2pW8xXU/rNr7VS+H62aqapfRpqFwnSQh9ap6THjsm41AxgA0MhFRtfrABS+Lx2KHJn82UOrnBKhjZOXpom2LQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="asset/js/tako.js"></script>
+    <script src="asset/js/script.js"></script>
+    <script src="asset/js/style-switcher.js"></script>
 </body>
 </html>
