--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- Aside start -->
             <div class="aside">
                 <div class="logo">
-                    <a href=""><span>Atlas</span></a>
+                    <a href=""><span>KT</span></a>
                 </div>
                 <div class="nav-toggler">
                     <span></span>
@@ -46,15 +46,15 @@
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
-                            <h3 class="hello">Xin chào, tôi là <span class="name">KT</span></h3>
+                            <h3 class="hello">Xin chào, tôi là <span class="name">Nguyên</span></h3>
                             <h3 class="my-profession">Tôi là sinh viên ngành <span class="typing">Web</span></h3>
                             <p class="intro">Tôi là sinh viên ngành lập trình web tại FPT Polytechnic, đam mê công nghệ và luôn tìm kiếm cơ hội để phát triển kỹ năng và sáng tạo.</p>
                             <!-- <a href="#contact" class="btn hire-me">Liên hệ</a> -->
                              <div class="container-button">
                                 <a href="#" class="button">
                                     <div class="button__content">
-                                        <span class="button__text">Download</span>
-                                        <i class="ri-download-cloud-fill button__icon"></i>
+                                        <span class="button__text">Tìm hiểu</span>
+                                        <i class="ri-corner-right-down-line"></i>
     
                                         <div class="button__reflection-1"></div>
                                         <div class="button__reflection-2"></div>
@@ -262,12 +262,12 @@
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
-                            <h2>Portfolio</h2>
+                            <h2>Dự án</h2>
                         </div>
                     </div>
                     <div class="row">
                         <div class="portfolio-heading">
-                            <h2>My Last Project:</h2>
+                            <h2>Dự án gần nhất:</h2>
                         </div>
                     </div>
                     <div class="row">
@@ -275,7 +275,7 @@
                          <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/asset/img/images/portfolio/portfolio-1.jpg" alt="">
+                                    <img src="https://blank.page/og.png" alt="">
                                 </div>
                             </div>
                          </div>
@@ -284,7 +284,7 @@
                          <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/asset/img/images/portfolio/portfolio-2.jpg" alt="">
+                                    <img src="https://blank.page/og.png" alt="">
                                 </div>
                             </div>
                          </div>
@@ -293,7 +293,7 @@
                          <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/asset/img/images/portfolio/portfolio-3.jpg" alt="">
+                                    <img src="https://blank.page/og.png" alt="">
                                 </div>
                             </div>
                          </div>
@@ -302,7 +302,7 @@
                          <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/asset/img/images/portfolio/portfolio-4.jpg" alt="">
+                                    <img src="https://blank.page/og.png" alt="">
                                 </div>
                             </div>
                          </div>
@@ -311,7 +311,7 @@
                             <div class="portfolio-item padd-15">
                                 <div class="portfolio-item-inner shadow-dark">
                                     <div class="portfolio-img">
-                                        <img src="/asset/img/images/portfolio/portfolio-5.jpg" alt="">
+                                        <img src="https://blank.page/og.png" alt="">
                                     </div>
                                 </div>
                              </div>
@@ -320,7 +320,7 @@
                          <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/asset/img/images/portfolio/portfolio-6.jpg" alt="">
+                                    <img src="https://blank.page/og.png" alt="">
                                 </div>
                             </div>
                          </div>
@@ -342,7 +342,7 @@
                          <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-phone"></i></div>
                             <h4>Phone</h4>
-                            <p>+02344356675</p>
+                            <p>+023443675</p>
                          </div>
                         <!-- Contact info item end -->
                         <!-- Contact info item start -->
@@ -367,8 +367,8 @@
                         </div>
                     <!-- Contact info item end -->
                     </div>
-                    <h3 class="contact-title">  SEND ME AN EMAIL</h3>
-                    <h4 class="contact-sub-title">IM VERU RESPOSIVE TO MESS</h4>
+                    <h3 class="contact-title">  Hãy Gửi Mail Cho Tôi</h3>
+                    <h4 class="contact-sub-title"></h4>
                     <!-- Contact Form -->
                      <div class="row">
                         <div class="contact-form padd-15">
@@ -404,7 +404,7 @@
                                         <a href="#" class="button">
                                             <div class="button__content">
                                                 <span class="button__text">Gửi</span>
-                                                <i class="ri-download-cloud-fill button__icon"></i>
+                                                <i class="ri-send-plane-fill"></i>
             
                                                 <div class="button__reflection-1"></div>
                                                 <div class="button__reflection-2"></div>
