--- a/index.html
+++ b/index.html
@@ -129,16 +129,16 @@
                                         <!-- <div class="info-item padd-15">
                                             <p>City: <span>27 Sep 2000</span> </p>
                                         </div> -->
-                                        <div class="info-item padd-15">
+                                        <!-- <div class="info-item padd-15">
                                             <p>Freelnace: <span>27 Sep 2000</span> </p>
+                                        </div> -->
                                         </div>
-                                        </div>
-                                    <div class="row">
+                                    <!-- <div class="row">
                                         <div class="buttons padd-15">
                                             <a href="" class="btn">Download CV</a>
                                             <a href="#contact" class="btn hire-me">Hire Me</a>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="skills padd-15">
                                     <div class="row">
